# pyvenezuela

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  pyvenezuela-package.yml  test.yml
docs/: bcv.md  cache.md  cne.md  index.md  inicio.md
overrides/: main.html
pyvenezuela/: __init__.py  cache.py  decorators.py
pyvenezuela/clients/: bcv.py  cne.py
pyvenezuela/schemas/: __init__.py  bcv.py  cache.py  cne.py  persona.py
scripts/: format.sh  lint.sh
tests/: conftest.py  test_cache.py  test_decorators.py
tests/clients/: __init__.py  test_bcv_client.py  test_cne_client.py
