[project]
name = "pyvenezuela"
dynamic = ["version"]
description = "Python library to query Venezuela's data (BCV and CNE)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jose Andres Morales", email = "jose2kk@gmail.com" }]
requires-python = ">=3.10"
keywords = ["venezuela", "bcv", "cne", "exchange-rate", "cedula", "dolar"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/jose2kk/pyvenezuela"
Repository = "https://github.com/jose2kk/pyvenezuela"
Documentation = "https://pyvenezuela.jose2kk.com"
Issues = "https://github.com/jose2kk/pyvenezuela/issues"

[dependency-groups]
dev = [
    "coverage>=7.5",
    "pytest>=8.2",
    "requests-mock>=1.12",
    "ruff>=0.4",
    "ty>=0.0.1a8",
    "types-beautifulsoup4>=4.12",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pyvenezuela"]

[tool.uv]
package = true

[tool.ty.environment]
python-version = "3.10"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"
exclude = [".venv", "dist", "build", "site"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "SIM108"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pyvenezuela"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyvenezuela"]
branch = true

[tool.coverage.report]
show_missing = true
